# StoryDiffusion

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.cpu  Dockerfile.detailed  Makefile  README.md  REFACTORING.md  SD35_TENSORRT_NOTES.md  TENSORRT_STATUS.md  app.py  cog.yaml  compose.yml  convert_bin_to_safetensors.py  download_models.py  environment.yaml  gradio_app_sdxl_specific_id_low_vram.py  gradio_app_sdxl_specific_id_low_vram.py.bak  gradio_app_sdxl_specific_id_low_vram_mps.py  launch.py  main.py  main_old.py  predict.py  pyproject.toml  requirements-macos.txt  requirements.txt  run_app.py  setup_comparison.sh  start_storydiffusion.sh  story_diffusion_app.py  test_controlnet.py  test_models.py  test_tensorrt_fix.py  verify_install.py
.claude/: settings.local.json
config/: models.yaml  models.yaml.bak  settings.py
storydiffusion/: __init__.py  __main__.py  config.py  device.py
storydiffusion/generation/: __init__.py  engine.py  generator.py  utils.py
storydiffusion/models/: __init__.py  attention.py  loader.py  pipeline.py
storydiffusion/ui/: __init__.py  app.py  callbacks.py  components.py  examples.py  interface.py
storydiffusion/utils/: __init__.py  character.py  image.py
upgrade/: check_conda_packages.py  conda_pkg_installer.py  get_env_details.py  logger.py  multithread_conda_pkg_installer.py
utils/: adapter_utils.py  device.py  file_utils.py  gradio_utils.py  instantid_pipeline.py  load_models_utils.py  model.py  model_loader.py  pipeline.py  tensorrt_builder.py  tensorrt_sd35_pipeline.py  utils.py
