[project]
name = "storydiffusion"
version = "0.1.0"
description = "StoryDiffusion: Consistent Self-Attention for Long-Range Image and Video Generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "xformers>=0.0.28",
    "gradio>=5.8.0",
    "diffusers>=0.31.0",
    "transformers>=4.47.1",
    "huggingface-hub>=0.27.0",
    "spaces>=0.30.4",
    "numpy>=1.26.0",
    "accelerate>=1.2.1",
    "safetensors>=0.4.5",
    "omegaconf>=2.3.0",
    "peft>=0.14.0",
    "httpx>=0.27.2",
    "pillow>=10.0.0",
    "tqdm",
    "scipy",
    "sentencepiece>=0.2.0", # For T5 tokenizer
    "opencv-python>=4.8.0", # For InstantID
    "insightface>=0.7.3", # For InstantID face detection
    "onnxruntime-gpu>=1.17.0", # For InstantID and TensorRT
    "controlnet-aux>=0.0.9", # ControlNet preprocessing
    "PyYAML>=6.0", # For model config parsing
]
